--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1774,3 +1774,65 @@ body::-webkit-scrollbar-thumb {
         width: 3.4rem;
         padding: 0 10px 0 0;
     }
+
+
+/*Messages Section*/
+#chat-container {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: 300px;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+#chat-header {
+    background-color: #ddd;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#chat-body {
+    padding: 10px;
+    height: 200px;
+}
+
+#chat-messages {
+    height: 150px;
+    overflow-y: scroll;
+}
+
+#chat-input {
+    display: flex;
+    margin-top: 10px;
+}
+
+    #chat-input input[type="text"] {
+        flex-grow: 1;
+        padding: 5px;
+        border-radius: 3px;
+        border: 1px solid #ccc;
+    }
+
+    #chat-input button {
+        padding: 5px 10px;
+        margin-left: 5px;
+        border-radius: 3px;
+        background-color: #4CAF50;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+    }
+
+#minimize-btn {
+    padding: 5px;
+    background-color: transparent;
+    border: none;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+}
