--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -76,7 +76,7 @@
                                    name="loginID"
                                    id="loginID"
                                    class="form-control w-110 place"
-                                   placeholder="i-e BITF19M024"
+                                   placeholder="i-e BSEF20M026"
                                    aria-label="Username"
                                    required />
                             <span class="input-group-text">&#64;pucit.edu.pk</span>
