--- a/Views/Register/Index.cshtml
+++ b/Views/Register/Index.cshtml
@@ -107,7 +107,7 @@
                                    id="roll"
                                    name="roll"
                                    class="form-control w-110 place"
-                                   placeholder="College ID i-e BITF19M024"
+                                   placeholder="College ID i-e BSEF20M026"
                                    aria-label="Username"
                                    autocomplete="off"
                                    required />
