--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,18 +19,22 @@
     <!-------------google-fonts ------------------>
     <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Lato&family=Open+Sans+Condensed:wght@300&family=Source+Code+Pro&family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap"
           rel="stylesheet" />
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-            crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+   
+   @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
           crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+*@
+
     <link rel="stylesheet"
           href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
           crossorigin="anonymous" />
+
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -47,13 +51,13 @@
                         <div class="navMenuCoursesMain">
                             <ul class="navmenucourses">
                                 <li>
-                                    <a href="Home" target="_blank" style="color: #00adb5">home</a>
+                                    <a href="Home" style="color: #00adb5">home</a>
                                 </li>
                                 <li><a href="About">About</a></li>
                                 <li><a href="Courses">courses</a></li>
                                 <li><a href="Team">Team</a></li>
                                 <li><a href="SocialMedia">Updates</a></li>
-                                <li><a href="Contact">contact</a></li>
+                                <li><a href="Contact">feedback</a></li>
                                 <li><a href="Contribution">contribute</a></li>
                                 <li>
                                     <div class="dropdownCourse">
@@ -63,10 +67,10 @@
                                                 data-toggle="dropdown"
                                                 aria-haspopup="true"
                                                 aria-expanded="false">
-                                                ViewBag.user.Fname                                        </button>
+                                                @ViewBag.user.Fname                                        </button>
                                         <div class="dropdown-menu"
                                              aria-labelledby="dropdownMenuButton">
-                                            <!--
+                                            
                                             <a class="dropdown-item-Courses"
                                                href="UserProfile"
                                                selected>My Profile</a>
@@ -74,7 +78,6 @@
                                                href="AdminSite"
                                                id="adminPanel"
                                                style="display: none">Go to Admin Panel</a>
-                                            -->
                                             <a class="dropdown-item-Courses" href="Home/Logout">Log out</a>
                                         </div>
                                     </div>
@@ -88,26 +91,7 @@
                         @RenderBody()
                     </div>
                 </div>
-                @*<div class="center-items-container">
-                    <div class="tagline-container">
-                        <div class="tagline">
-                            WELCOME
-                            <span class="username-tagline">&nbsp; @ViewBag.user.Fname</span>,
-                            to FCIT HELP DESK
-                        </div>
-                    </div>
-                    <div class="introlines-container">
-                        <p class="introlines">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-                            debitis voluptatibus omnis autem. Quam laborum consectetur aliquam
-                            id eum! Provident!
-                        </p>
-                    </div>
-                    <div class="explore-btn-container">
-                        <a href="Courses" class="explore-btn">Explore us!</a>
-                    </div>
-                </div>
-*@                <script>
+               <script>
                     let is_admin = "@ViewBag.user.IsAdmin";
                     if (is_admin === "Y") {
                         document.getElementById("adminPanel").style.display = "block";
@@ -124,5 +108,11 @@
     <script type="text/javascript" src="~/js/particles.js"></script>
     <script type="text/javascript" src="~/js/app.js"></script>  
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
