--- a/wwwroot/css/subjects.css
+++ b/wwwroot/css/subjects.css
@@ -31,7 +31,7 @@ p {
     display: flex;
     justify-content: center;
     max-width: 100vw;
-    height: 150vh;
+    /*height: 150vh;*/
 }
 /*  ======================== Header ============================ */
 p {
@@ -44,6 +44,7 @@ p {
     height: 100%;
     background-image: linear-gradient(#020c20ec, #0a1922ee);
     flex-direction: column;
+    left: 0;
 }
 
 /* Course */
